[tool.poetry]
name = "probabilistic-forecast"
version = "0.1.0"
description = "Code to generate probabilistic forecasts seen on the Mosqlimate and Infodengue platforms."
authors = ["Eduardo Correa Araujo<eduardoaraujo@alunos.utfpr.edu.br>","Flavio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
pandas = "^2.2.2"
geopandas = "^0.14.4"
keras = "^3.3.3"
seaborn = "^0.13.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
epiweeks = "^2.3.0"
flexitext = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
